public/stylesheets/lnug.css
@charset "UTF-8";

@font-face {
    font-family: '04b03Regular';
    src: url('/fonts/04b_03__-webfont.eot');
    src: url('/fonts/04b_03__-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/04b_03__-webfont.woff') format('woff'),
         url('/fonts/04b_03__-webfont.ttf') format('truetype'),
         url('/fonts/04b_03__-webfont.svg#04b03Regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  background: #f0f3f0;
  color: #333333;
  margin: 0;
  padding: 0; }

#wrapper {
  width: 700px;
  background: white;
  padding: 0px 20px;
  margin: 0 auto 20px;
  text-align: left; }

#header {
  position: relative;
  width:740px;
  right:20px;
   }
  #header h1 a{
    width:135px;
    text-indent:-9999px;
    background: #434343 url(/images/lnug.png) no-repeat center right;
    position: absolute;
    left: -50px;
    top:10px;
    color: #111111;
    border-radius: 5px;
    font-size: 52px;
    padding: 50px 35px;
    display: inline-block;
    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
    z-index: 2; }

#info {
  background: black;
  padding: 15px 10px 15px 180px;
  color: white;
  border-bottom: 2px solid #202020;
  position: relative;
  z-index: 1;
}
  #info p {
    padding: 0px;
    margin: 0px; }

#blurb {
  padding: 20px 20px 20px 160px; }
  #blurb p {
    line-height: 30px; }

#content {
  border-top: 1px solid #dddddd;
  padding: 20px 0px; }

#map {
  width: 90%;
  border: 5px solid #f0f0f0;
  height: 180px; }

ul.event-actions {
  margin: 0 0 10px;
  padding: 0; }
  ul.event-actions li {
    list-style: none;
    margin-bottom: 10px; }
    ul.event-actions li a {
      font-weight: bold;
      background: white;
      border-bottom: 0; }
  ul.event-actions .register a {
    display: block;
    padding: 10px 12px;
    border-radius: 5px;
    font-size: 20px;
    margin: 25px 0px;
    float: none;
    color: #000;
    background: #d0f57e; }
    ul.event-actions .register a:hover, ul.event-actions .register a:active {
      background: #d5d5d5;
      padding-left: 50px; }
  ul.event-actions .lanyrd {
    float: left;
    padding-left: 26px;
    background: url("../images/lanyrd.png") no-repeat 0 50%;
    margin-right: 14px; }
  ul.event-actions .addcal {
    float: left;
    padding-left: 26px;
    background: url("../images/ical.png") no-repeat 0 50%; }

#footer {
  border-top: 1px solid #dddddd;
  margin-top: 25px;
  color: #aaaaaa;
  font-size: 12px; }
  #footer p {
    float: left; }
  #footer a.img {
    background: none;
    border: none;
    float: right;
    padding-top: 10px; }

h2 {
  margin: 10px 0px 15px; }

a, a:visited, ul#videos li a p {
  color: #334433;
  border-bottom: 1px solid #c0d56e;
  text-decoration: none;
  color: #B3D46D;
  padding: 0px 2px;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear; }
  a:hover, body ul#videos li a:hover p, a:visited:hover {
    background: #f5fd72;
    color:#000;
    border-bottom-color: #f2fd3f; }

p, address {
  line-height: 26px; }

address {
  font-style: normal;
}

.column {
  float: left;
  width: 320px;
  margin-bottom: 10px; }

.row {
  border-top: 1px solid #eeeeee;
  margin-top: 15px;
  padding-top: 15px; }

.clear, #footer {
  clear: both; }

.clear:after, #footer:after {
  content: " ";
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden; }

.left {
  float: left; }

.right {
  float: right; }

ul#videos {
  float: left;
  width: 715px;
  margin: 0;
  padding: 0;
}

ul#videos li {
  list-style: none;
  margin: 0 15px 30px 0;
  padding: 0;
  width: 150px;
  float: left;
}

ul#videos li a {
  display: block;
  float: left;
  text-decoration: none;
  border-bottom: none;
}
ul#videos li a p {
  padding: 5px 0 5px 5%;
  margin: 0px;
  width: 95%;
  font-size: 14px;
  line-height: 18px;
}

ul#videos li a:hover {
  background: #fff;
}

@media only screen and (max-width: 600px) {
  #header h1 {
    position: static;
    display: block;
    border: 0;
    width: auto;
    padding: 50px 20px;
    border-radius: 0;
    margin: 0px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg); }
    #header h1:hover {
      border: 0;
      -webkit-transform: rotate(0deg); }

  #info, #blurb {
    display: block;
    padding: 20px;
    position: static; }

  #venue {
    clear: both;
    margin-top: 20px;
    padding-top: 10px;
    border-top: 1px solid #eeeeee; }

  #wrapper {
    width: 100%;
    padding: 0px 0px 20px; }

  ul#videos {
    width: auto;
    float: none;
    margin-bottom: 20px;
  }
  
  ul#videos li {
    float: none;
    display: block;
    width: 100%;
    padding: 0;
    clear: both;
  }
  
  ul#videos li a {
    width: 100%;
    display: block;
  }
  ul#videos li a p {
    float: right;
    width: 40%;
    padding: 25px 10px 25px;
    border-bottom: none;
  }

  #content {
    padding: 10px 20px 0px; }

  .column {
    width: 100%; }

  .left, .right, .lanyrd, .addcal {
    float: none; }

  #footer a.img {
    float: none; } }


.twtr-hd, .twtr-ft{
  display:none !important;
}

